--- a/style.css
+++ b/style.css
@@ -1,25 +1,57 @@
 body,html {
 	font-family: 'Slabo 27px', serif;
-	/*margin: 0 auto;*/
 	width: 100%;
 	height: 100%;
-	/*margin: 0px;*/
-	/*padding: 0px;*/
 	overflow-x: hidden; 
 	text-align: center;
+	margin: 0 auto;
 }
 .game {
 	position: relative;
 	top: 25%; 
-	/*left: 25%;*/
-	/*transform: translateX(-25%);*/
-	/*-webkit-transform: translateX(-25%);*/
 	transform: translateY(-25%);
 	-webkit-transform: translateY(-25%);
-
-	/*border: 4px solid blue;*/
 }
-
-#board{
-	border:1px solid #FFFFFF;
+.small {
+	border-collapse: collapse;
+}
+.small td {
+	border: 1px solid black;
+}
+.small tr:first-child td {
+	border-top: 0;
+}
+.small tr:last-child td {
+	border-bottom: 0;
+}
+.small tr td:first-child {
+	border-left: 0;
+}
+.small tr td:last-child {
+	border-right: 0;
+}
+.small td {
+	width: 6vh;
+	height: 6vh;
+}
+html {
+	text-align: center;
+	font-family: 'Slabo 27px', serif;
+	margin: 0 auto;
+}
+.mid-col {
+	border-right: 3px solid black;
+	border-left: 3px solid black;
+}
+.mid-row {
+	border-top: 3px solid black;
+	border-bottom: 3px solid black;
+}
+.large {
+	margin: 0 auto;
+}
+.switch {
+	position: fixed;
+	width: 100%;
+	bottom: 0;
 }
